Добавил новые файлы
Создал логотип

--- a/HomeWork 1/index.html
+++ b/HomeWork 1/index.html
@@ -11,15 +11,18 @@
 </head>
 
 <body class="article_wrapper">
-    <div class="text_section">
-        <h1 class=“title”>The worlds first learning solution for everyone</h1>
-        <p class="text">
-            It is a long established fact that a reader will be distracted by the readable content of a page wher looking at its layout. The point of using Lorem ipsum.
-        </p>
-        <button class="article_button1">Get started</button>
-        <button class="article_button2">Create account</button>
-    </div>
-    <img src="images/clipart1.png" alt="Работа и время" class="full_screen_photo">
+    <div class="main">
+        <div class="text_section">
+            <h1 class=“title”>The world’s first learning solution for everyone</h1>
+
+            <p class="text">
+                It is a long established fact that a reader will be distracted by the readable content of a page wher looking at its layout. The point of using Lorem ipsum.
+            </p>
+            <button class="article_button1">Get started</button>
+            <button class="article_button2">Create account</button>
+        </div>
+        <img src="images/Component 1.png" alt="Mix" class="header">
+        <img src="images/clipart1.png" alt="Работа и время" class="background">
 </body>
 
 </html>
