Выполнил 2 домашнюю работу
Добавил новые файлы

--- a/HomeWork 2/index.html
+++ b/HomeWork 2/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -13,33 +13,35 @@
 
 <body>
     <header>
-        <div class="main-block">
+        <div class="main_block">
             <a href="images/svg/logo.svg" class="logo">
-                <img src="images/svg/logo.svg">
+                <img src="images/svg/logo.svg" alt="logotype">
             </a>
-            <ul class="menu">
-                <li class="menu_item">
-                    <a href="#" class="menu_link">Product</a>
-                </li>
-                <li class="menu_item">
-                    <a href="#" class="menu_link">Pricing</a>
-                </li>
-                <li class="menu_item">
-                    <a href="#" class="menu_link">About Us</a>
-                </li>
-                <li class="menu_item">
-                    <a href="#" class="menu_link">Blog</a>
-                </li>
-                <li class="menu_item">
-                    <a href="#" class="menu_link">Help</a>
-                </li>
-                <li class="menu_item">
-                    <a href="#" class="menu_link">Log In</a>
-                </li>
+            <div class=" top_menu">
+                <ul class="menu">
+                    <li class="menu_item">
+                        <a href="#" class="menu_link">Product</a>
+                    </li>
+                    <li class="menu_item">
+                        <a href="#" class="menu_link">Pricing</a>
+                    </li>
+                    <li class="menu_item">
+                        <a href="#" class="menu_link">About Us</a>
+                    </li>
+                    <li class="menu_item">
+                        <a href="#" class="menu_link">Blog</a>
+                    </li>
+                    <li class="menu_item">
+                        <a href="#" class="menu_link">Help</a>
+                    </li>
+                    <li class="menu_item">
+                        <a href="#" class="menu_link">Log In</a>
+                    </li>
+                </ul>
                 <div class="bar_button">
-                    <a href="https://app.aworker.io/login" class="btn btn-nav">Create account</a>
+                    <a href="https://app.aworker.io/login" class="button_nav">Create account</a>
                 </div>
-            </ul>
+            </div>
             <img src="images/people.jpg" alt="people talk" class="main_image">
         </div>
     </header>
@@ -57,15 +59,20 @@
         <div class="container">
             <div class="altmetric">
                 <img src="images/png/altmetric.png" alt="altmetric">
-                <div class="coca-cola">
-                    <img src="images/png/coca-cola.png" alt="coca-cola">
-                    <div class="unicef">
-                        <img src="images/png/unicef.png" alt="unicef">
-                        <div class="gasin">
-                            <img src="images/png/gasin.png" alt="gasin">
-                            <div class="github">
-                                <img src="images/png/github.png" alt="github">
-                            </div>
+            </div>
+            <div class="coca-cola">
+                <img src="images/png/coca-cola.png" alt="coca-cola">
+            </div>
+            <div class="unicef">
+                <img src="images/png/unicef.png" alt="unicef">
+            </div>
+            <div class="gasin">
+                <img src="images/png/gasin.png" alt="gasin">
+            </div>
+            <div class="github">
+                <img src="images/png/github.png" alt="github">
+            </div>
+        </div>
     </footer>
 </body>
 
